# pku-minic

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json  starship.toml
src/: ast.rs  code_gen.rs  ir_gen.rs  irutils.rs  lib.rs  main.rs  sysy.lalrpop  utils.rs
src/analysis/: call.rs  cfg.rs  dominators.rs  error.rs  frame.rs  global.rs  liveliness.rs  localvar.rs  mod.rs  register.rs
src/ast/: arbitrary.rs  display.rs  mod.rs
src/codegen/: builder.rs  error.rs  imm.rs  liveliness.rs  mod.rs  peephole.rs  register.rs  riscv.rs  simulate.rs
src/codegen/passes/: register.rs
src/common/: cfg.rs  mod.rs  terminated.rs
src/irgen/: cfg.rs  context.rs  error.rs  layout.rs  metadata.rs  mod.rs  symtable.rs  types.rs
tests/: kani.rs
