[package]
name = "pku-minic"
version = "0.1.0"
edition = "2021"
authors = ["Zhuang Jiayi <wybxc@stu.pku.edu.cn>"]
description = "A compiler for the SysY language"
default-run = "pku-minic"

[dependencies]
clio = "0.3.4"
im = "15.1.0"
key-node-list = "0.0.5"
koopa = "0.0.7"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.9.5"
thiserror = "1.0.49"
proptest = { version = "1.3.1", optional = true }
nolog = "1.0.19"
indenter = "0.3.3"
rand = { version = "0.8.5", optional = true }
petgraph = "0.6.4"

[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
proptest = "1.3.1"
rand = "0.8.5"

[features]
default = []
proptest = ["dep:proptest", "dep:rand"]
arb-coverage = []
trace = ["nolog/trace", "nolog/location_hide"]

[profile.profiling]
inherits = "release"
debug = true
